--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
             </div>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+      <h3>Contacts</h3>
+    </footer>
   </body>
 </html>
