--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </section>
     </main>
     <footer>
-      <h3>Contacts</h3>
+      <h3>(Contacts)</h3>
     </footer>
   </body>
 </html>
